created global class for heading

--- a/pages/question/question-2.html
+++ b/pages/question/question-2.html
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <h1 class="question-head">Rick And Morty</h1>
+    <h1 class="page-head question-head">Rick And Morty</h1>
 
     <!-- Question -->
     <div class="question-body">
