--- a/pages/result/result.html
+++ b/pages/result/result.html
@@ -47,7 +47,7 @@
     <!-- Question -->
 
     <!-- q-1 -->
-    <h1 class="result-head">Result</h1>
+    <h1 class="result-head page-head">Result</h1>
 
     <h2 class="final-score">
         Final Score: 100/100
