--- a/pages/rules/rules.html
+++ b/pages/rules/rules.html
@@ -48,7 +48,7 @@
 
     <div class="rules-body text-center">
 
-        <h1 class="rules-head">
+        <h1 class="page-head">
             Rules
         </h1>
 
