added quit button

--- a/pages/question/question-2.html
+++ b/pages/question/question-2.html
@@ -43,10 +43,41 @@
         <i class="material-icons hamburger-icon">menu</i>
       </nav>
     </header>
+    <!-- quit -->
+    <button modal-btn-for="quit-modal" class="btn btn-danger quit-btn modal-open-btn">Quit</button>
+
+    <div id="quit-modal" class="modal-bg hidden">
+      <div class="modal position-rel">
+        <h2 class="text-large list-head">Quit quiz</h2>
+        <i
+          modal-btn-for="quit-modal"
+          class="material-icons modal-close-btn position-abs top-0 right-0"
+          >close</i
+        >
+        <p>
+            Are you sure that you want to quit?
+        </p>
+        <div class="modal-actions">
+          <button
+            modal-btn-for="quit-modal"
+            class="btn btn-primary modal-close-btn"
+          >
+            No
+          </button>
+          <button
+            modal-btn-for="quit-modal"
+            class="btn btn-primary-ol modal-close-btn"
+          >
+            Yes
+          </button>
+        </div>
+      </div>
+    </div>
 
     <h1 class="page-head question-head">Rick And Morty</h1>
 
     <!-- Question -->
+
     <div class="question-body">
       <div class="quiz-stat">
         <p>Question: 5/5</p>
