--- a/pages/authentication/signin.html
+++ b/pages/authentication/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-commerce</title>
+    <title>Wittest</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -57,7 +57,7 @@
         <div>
           <div class="sign-x-helper">
             <div><input type="checkbox" /> Remember me</div>
-            <a href="#" class="primary">Forgot password?</a>
+            <a href="../forgot-password/get-mail.html" class="primary">Forgot password?</a>
           </div>
           <input class="btn btn-primary" type="submit" value="login" />
         </div>
