chore: edited links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <div class="home-body">
       <h1 class="app-name">WitTest</h1>
       <h1 class="tag-line">Test your Wit</h1>
-      <button class="btn btn-primary">Sign In</button>
+      <a href="pages/authentication/signin.html" class="btn link">
+        <button class="btn btn-primary">Sign In</button>
+      </a>
 
       <a href="pages/category/category.html" class="btn link">
         <button class="btn btn-primary-ol">Browse</button>
