--- a/pages/authentication/signin.html
+++ b/pages/authentication/signin.html
@@ -32,7 +32,7 @@
             <input class="input nav-search" type="text" placeholder="Search" />
           </li>
           <li>
-            <a href="pages/category/category.html" class="btn link btn-primary nav-btn">
+            <a href="../category/category.html" class="btn link btn-primary nav-btn">
             Browse
             </a>
           </li>
